Fix: WCAG contrast errors within leafelt map zoom controls

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -532,6 +532,17 @@ footer a:hover {
   color: #ffffff;
 }
 
+
+/* 
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+----------------------------------LEAFLET MAP CSS--@
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+*/
+
+.leaflet-control > p {
+  color: #000;
+}
+
 /* tablets and up  */
 @media (min-width: 768px) {
   .navSocial {
